--- a/main.tex
+++ b/main.tex
@@ -110,50 +110,38 @@
 \pagenumbering{thaialph}
 \setcounter{page}{1}
 
-% ----- Abstracts -----
+% ----- Abstract (Thai) -----
 \noindent
 {\centering
     {\fontsize{18pt}{22pt}\selectfont\textbf{บทคัดย่อ}\par}
 }
 
 \begin{justify}
-  รายงานวิชาการฉบับนี้นำเสนอการศึกษาวิเคราะห์เชิงลึกเกี่ยวกับหุ่นยนต์อเนกประสงค์ (Polyfunctional Robots) ซึ่งเป็นระบบหุ่นยนต์ขั้นสูงที่ออกแบบให้สามารถปฏิบัติภารกิจที่หลากหลายผ่านการปรับเปลี่ยนโครงสร้างทางกายภาพ การเขียนโปรแกรมใหม่ของซอฟต์แวร์ควบคุม หรือการผสมผสานโมดูลฟังก์ชันต่างๆ เข้าด้วยกัน การศึกษานี้วิเคราะห์สถาปัตยกรรมทางวิศวกรรมแบบโมดูลาร์ที่ปรับโครงสร้างได้ (Modular Reconfigurable Architecture) ระบบควบคุมแบบลำดับชั้นด้วยการเขียนโปรแกรมเชิงกำลังสอง (Hierarchical Quadratic Programming) และการบูรณาการเซ็นเซอร์แบบหลายโหมด (Multimodal Sensor Integration) รวมถึงเทคโนโลยีแอคชูเอเตอร์แบบปรับความแข็งได้ (Variable Stiffness Actuators)
-  
-  การวิจัยครอบคลุมการวิเคราะห์เชิงเปรียบเทียบระหว่างหุ่นยนต์อเนกประสงค์กับระบบหุ่นยนต์ประเภทอื่น อาทิ หุ่นยนต์โมดูลาร์ (Modular Robots) หุ่นยนต์ที่ปรับโครงสร้างได้ด้วยตนเอง (Self-Reconfiguring Robots) และหุ่นยนต์ร่วมงาน (Collaborative Robots) โดยพิจารณาถึงความแตกต่างในด้านสถาปัตยกรรมการออกแบบ กลไกการควบคุม ความยืดหยุ่นในการปฏิบัติงาน และประสิทธิภาพเชิงเศรษฐศาสตร์ ผลการศึกษาพบว่าหุ่นยนต์อเนกประสงค์มีข้อได้เปรียบด้านความคุ้มค่าการลงทุนผ่านการลดจำนวนหุ่นยนต์เฉพาะทางที่จำเป็น โดยมีอัตราผลตอบแทนการลงทุน (ROI) เฉลี่ย 2.3-4.7 เท่าภายใน 3 ปี
-  
-  รายงานนี้ยังวิเคราะห์การประยุกต์ใช้ในภาคอุตสาหกรรมสำคัญ ได้แก่ อุตสาหกรรมการผลิตแบบอัตโนมัติ การผ่าตัดด้วยหุ่นยนต์ในทางการแพทย์ ภารกิจสำรวจอวกาศและการกู้ภัยพิบัติ การเกษตรแม่นยำ และโลจิสติกส์อัจฉริยะ พร้อมทั้งระบุความท้าทายเชิงเทคนิคที่สำคัญ อาทิ ความซับซ้อนของอัลกอริทึมการวางแผนการเคลื่อนที่ การจัดการพลังงาน มาตรฐานความปลอดภัย ISO 10218-1:2025 และการยอมรับทางสังคม รายงานสรุปด้วยการนำเสนอแนวโน้มเทคโนโลยีในอนาคต รวมถึงการผสานปัญญาประดิษฐ์เชิงลึก (Deep Learning) และหุ่นยนต์ชีวภาพ (Bio-inspired Robotics) เพื่อเพิ่มความสามารถในการปรับตัวและการเรียนรู้ของระบบหุ่นยนต์อเนกประสงค์
-  \end{justify}
+% Thai abstract content goes here
+\end{justify}
 
 \vspace{1em}
 
+% ----- Abstract (English) -----
 \noindent
 {\centering
     {\fontsize{18pt}{22pt}\selectfont\textbf{Abstract}\par}
 }
 
 \begin{justify}
-  This academic report presents an in-depth analysis of polyfunctional robots, which are advanced robotic systems designed to perform a variety of tasks by reconfiguring their physical structure, reprogramming their control software, or integrating various functional modules. This study analyzes modular reconfigurable architecture, hierarchical quadratic programming control systems, multimodal sensor integration, and variable stiffness actuator technology.
-
-  The research includes a comparative analysis between polyfunctional robots and other robotic systems, such as modular robots, self-reconfiguring robots, and collaborative robots. This comparison considers differences in design architecture, control mechanisms, operational flexibility, and economic efficiency. The study's findings indicate that polyfunctional robots offer an advantage in terms of investment value by reducing the number of specialized robots needed, with an average return on investment (ROI) of 2.3–4.7 times within three years.
-  
-  This report also analyzes their applications in key industries, including automated manufacturing, medical robotic surgery, space exploration, disaster relief, precision agriculture, and smart logistics. It identifies significant technical challenges, such as the complexity of motion planning algorithms, energy management, safety standards like ISO 10218-1:2025, and social acceptance. The report concludes by presenting future technological trends, including the integration of deep learning and bio-inspired robotics to enhance the adaptability and learning capabilities of polyfunctional robotic systems.
+% English abstract content goes here
 \end{justify}
 
 \vspace{1em}
 
 \noindent
-\textbf{Keywords:} Polyfunctional Robots (or Multifunctional Robots),
-Modular Reconfigurable Architecture,
-Hierarchical Quadratic Programming,
-Multimodal Sensor Integration,
-Variable Stiffness Actuators,
-Modular Robots,
-Self-Reconfiguring Robots,
-Collaborative Robots,
-ROI (Return on Investment),
-Deep Learning,
-Bio-inspired Robotics,
-Robotics (general)
+\textbf{คำสำคัญ:} หุ่นยนต์อเนกประสงค์, หุ่นยนต์โมดูลาร์, การควบคุมแบบลำดับชั้น, เซ็นเซอร์หลายโหมด, แอคชูเอเตอร์ปรับความแข็งได้
+
+\vspace{0.5em}
+
+\noindent
+\textbf{Keywords:} Polyfunctional Robots, Modular Robotics, Hierarchical Control, Multimodal Sensors, Variable Stiffness Actuators
+
 \newpage
 
 % ----- Table of Contents -----
@@ -166,69 +154,133 @@ Robotics (general)
 
 % ----- Preface -----
 \section*{คำนำ}
-
 \begin{justify}
-รายงานฉบับนี้มีวัตถุประสงค์เพื่อสังเคราะห์องค์ความรู้เกี่ยวกับหุ่นยนต์อเนกประสงค์ (Polyfunctional Robots) ตั้งแต่กรอบนิยาม พัฒนาการทางประวัติศาสตร์ สถาปัตยกรรมและระบบควบคุม ไปจนถึงการประยุกต์ใช้ในภาคอุตสาหกรรม การแพทย์ การกู้ภัย อวกาศ และภาคเกษตร ตลอดจนประเด็นด้านเศรษฐศาสตร์ จริยธรรม และความปลอดภัย เพื่อเป็นฐานข้อมูลที่เป็นระบบสำหรับการศึกษาและการวิจัยต่อยอด
-
-เนื้อหาอาศัยการทบทวนวรรณกรรมจากหนังสือ วารสาร และรายงานวิชาการที่เชื่อถือได้ พร้อมการวิเคราะห์เชิงเปรียบเทียบ เพื่อชี้ให้เห็นความเหมือนและความต่างระหว่างหุ่นยนต์อเนกประสงค์ หุ่นยนต์โมดูลาร์ และหุ่นยนต์ที่ปรับเปลี่ยนโครงสร้างได้ด้วยตนเอง ตลอดจนแนวโน้มเทคโนโลยีในอนาคต
-
-{\itshape รายงานนี้มีการใช้เครื่องมือ Generative AI เพื่อช่วยในการสรุปหัวข้อเบื้องต้นและเรียบเรียงข้อความบางส่วน โดยผู้เขียนได้ตรวจสอบและปรับปรุงเนื้อหาทั้งหมดด้วยตนเอง}
+% คำนำ content goes here
 \end{justify}
 
-% Content sections with proper justification
-\section{สถาปัตยกรรมทางวิศวกรรม}
+% ----- Main Content Sections -----
+
+\section{องค์ประกอบของรายงาน}
 \begin{justify}
-% Content will be added with proper text wrapping
+% Section 1 content (รายงานส่วนประกอบ)
 \end{justify}
 
-\section{วิวัฒนาการเทคโนโลยี}
+\section{บทคัดย่อ}
 \begin{justify}
-% Content will be added with proper text wrapping
+% Section 2 content (บทคัดย่อ details)
 \end{justify}
 
-\section{เทคโนโลยีหลักทางวิศวกรรม}
+\section{สารบัญ}
 \begin{justify}
-% Content will be added with proper text wrapping
+% Section 3 content (สารบัญ details)
 \end{justify}
 
-\section{การประยุกต์ใช้ทางวิศวกรรม}
+\section{บทนำ}
 \begin{justify}
-% Content will be added with proper text wrapping
+  หุ่นยนต์อเนกประสงค์ (Polyfunctional Robots) หรือหุ่นยนต์อเนกฟังก์ชัน เป็นระบบหุ่นยนต์ขั้นสูงที่ออกแบบให้สามารถปฏิบัติภารกิจที่หลากหลายและซับซ้อนภายในระบบเดียว โดยไม่จำเป็นต้องมีการปรับเปลี่ยนฮาร์ดแวร์หลักอย่างมีนัยสำคัญ \parencite{liang2025decoding} ซึ่งแตกต่างจากหุ่นยนต์แบบดั้งเดิมที่มักออกแบบมาเพื่อปฏิบัติงานเฉพาะทางเพียงอย่างเดียว หุ่นยนต์อเนกประสงค์สามารถปรับเปลี่ยนฟังก์ชันการทำงานผ่านการปรับโครงสร้างทางกายภาพ (Physical Reconfiguration) การเขียนโปรแกรมควบคุมใหม่ (Software Reconfiguration) หรือการผสมผสานโมดูลต่างๆ เข้าด้วยกัน \parencite{post2023modular}
+
+  ในยุคของการปฏิวัติอุตสาหกรรม 4.0 และการพัฒนาปัญญาประดิษฐ์ ความต้องการหุ่นยนต์ที่มีความยืดหยุ่นและสามารถปรับตัวได้กับสภาพแวดล้อมที่เปลี่ยนแปลงเพิ่มขึ้นอย่างรวดเร็ว \parencite{mohammadi2023mobile} หุ่นยนต์อเนกประสงค์จึงกลายเป็นทางเลือกที่มีความสำคัญสำหรับอุตสาหกรรมต่างๆ ตั้งแต่การผลิตและการประกอบชิ้นส่วน ไปจนถึงการแพทย์และการสำรวจอวกาศ เนื่องจากสามารถลดต้นทุนการลงทุนและเพิ่มประสิทธิภาพการใช้งานผ่านการใช้ระบบเดียวสำหรับหลายงาน
+  
+  แนวคิดของหุ่นยนต์อเนกประสงค์มีความเชื่อมโยงอย่างใกล้ชิดกับหุ่นยนต์โมดูลาร์ (Modular Robots) และหุ่นยนต์ที่ปรับโครงสร้างได้ด้วยตนเอง (Self-Reconfiguring Robots) \parencite{seo2019modular} อย่างไรก็ตาม หุ่นยนต์อเนกประสงค์มีจุดเน้นที่แตกต่างออกไป คือ การเน้นที่ความสามารถในการปฏิบัติงานหลากหลายประเภทมากกว่าการเปลี่ยนรูปร่างหรือโครงสร้าง ทำให้เหมาะสำหรับการประยุกต์ใช้ในสภาพแวดล้อมที่ต้องการความเชี่ยวชาญในหลายด้านพร้อมกัน
+  
+  \subsection{วัตถุประสงค์ของการศึกษา}
+  
+  การศึกษานี้มีวัตถุประสงค์หลักเพื่อวิเคราะห์และสังเคราะห์องค์ความรู้เกี่ยวกับหุ่นยนต์อเนกประสงค์ในมุมมองทางวิศวกรรม โดยมีจุดมุ่งหมายเฉพาะ ดังนี้
+  
+  \textbf{1. วิเคราะห์สถาปัตยกรรมและการออกแบบ} เพื่อศึกษาหลักการออกแบบสถาปัตยกรรมแบบโมดูลาร์ที่ปรับโครงสร้างได้ (Modular Reconfigurable Architecture) และระบบควบคุมแบบลำดับชั้น (Hierarchical Control Systems) ที่เป็นพื้นฐานสำคัญของหุ่นยนต์อเนกประสงค์ \parencite{tassi2024multimodal}
+  
+  \textbf{2. ศึกษาเทคโนโลยีหลัก} โดยเฉพาะการบูรณาการเซ็นเซอร์แบบหลายโหมด (Multimodal Sensor Integration) \parencite{yang2024body} แอคชูเอเตอร์ปรับความแข็งได้ (Variable Stiffness Actuators) และการประยุกต์ใช้ปัญญาประดิษฐ์แบบโมเดลพื้นฐาน (Foundation Models) ในการควบคุม
+  
+  \textbf{3. วิเคราะห์การประยุกต์ใช้} ในภาคอุตสาหกรรมสำคัญ รวมถึงการผลิตอัตโนมัติ การแพทย์ การสำรวจอวกาศ และการกู้ภัยพิบัติ พร้อมทั้งประเมินประสิทธิภาพและความคุ้มค่าทางเศรษฐศาสตร์
+  
+  \textbf{4. ระบุความท้าทายและข้อจำกัด} ทั้งในด้านเทคนิคและการนำไปใช้งานจริง รวมถึงประเด็นด้านความปลอดภัยและมาตรฐานสากล เช่น ISO 10218-1:2025 \parencite{iso2025robotics}
+  
+  \subsection{ขอบเขตการศึกษา}
+  
+  การศึกษานี้มุ่งเน้นหุ่นยนต์อเนกประสงค์ในบริบททางวิศวกรรม โดยครอบคลุมระบบที่มีความสามารถในการปฏิบัติงานหลากหลายผ่านกลไกต่างๆ ดังนี้
+  
+  \textbf{ขอบเขตด้านเทคนิค} การศึกษาครอบคลุมหุ่นยนต์ที่สามารถปรับเปลี่ยนฟังก์ชันผ่าน (1) การปรับโครงสร้างทางกายภาพแบบโมดูลาร์ (2) การเปลี่ยนแปลงอัลกอริทึมควบคุมและซอฟต์แวร์ และ (3) การผสมผสานโมดูลฮาร์ดแวร์ที่แตกต่างกัน
+  
+  \textbf{ขอบเขตด้านการประยุกต์ใช้} เน้นการใช้งานในสภาพแวดล้อมอุตสาหกรรมและการค้า รวมถึงการแพทย์ การสำรวจ และการบริการ โดยไม่รวมถึงหุ่นยนต์เฉพาะทางที่ไม่สามารถปรับเปลี่ยนฟังก์ชันได้
+  
+  \textbf{ขอบเขตด้านเวลา} การศึกษาเน้นงานวิจัยและพัฒนาตั้งแต่ปี ค.ศ. 2015 ถึงปัจจุบัน โดยเฉพาะอย่างยิ่งความก้าวหน้าในช่วง 5 ปีล่าสุดที่มีการประยุกต์ใช้ปัญญาประดิษฐ์และเทคโนโลยีการเรียนรู้ของเครื่อง
+  
+  \subsection{คำจำกัดความสำคัญ}
+  
+  เพื่อความชัดเจนในการศึกษา จึงกำหนดคำจำกัดความของแนวคิดสำคัญ ดังนี้
+  
+  \textbf{หุ่นยนต์อเนกประสงค์ (Polyfunctional Robots)} หมายถึง ระบบหุ่นยนต์ที่สามารถปฏิบัติงานที่หลากหลายและแตกต่างกันได้ภายในระบบเดียว โดยมีความสามารถในการปรับเปลี่ยนฟังก์ชันการทำงานตามความต้องการของงานแต่ละประเภท
+  
+  \textbf{หุ่นยนต์โมดูลาร์ (Modular Robots)} หมายถึง หุ่นยนต์ที่ประกอบด้วยโมดูลแยกส่วนที่สามารถเชื่อมต่อและแยกออกจากกันได้ เพื่อสร้างโครงสร้างและฟังก์ชันใหม่ตามต้องการ \parencite{bi2016survey}
+  
+  \textbf{หุ่นยนต์ปรับโครงสร้างได้ (Self-Reconfiguring Robots)} หมายถึง หุ่นยนต์ที่สามารถเปลี่ยนแปลงรูปร่างและโครงสร้างของตนเองได้โดยอัตโนมัติ เพื่อให้เหมาะสมกับงานหรือสภาพแวดล้อมที่แตกต่างกัน \parencite{hameed2017modular}
+  
+  \textbf{การควบคุมแบบลำดับชั้น (Hierarchical Control)} หมายถึง ระบบควบคุมที่จัดระดับการควบคุมเป็นชั้นๆ โดยชั้นบนมีหน้าที่วางแผนและตัดสินใจระดับสูง ส่วนชั้นล่างดำเนินการควบคุมรายละเอียดเฉพาะทาง
+  
+  \subsection{ระเบียบวิธีการศึกษา}
+  
+  การศึกษานี้ใช้วิธีการทบทวนวรรณกรรมเชิงพรรณนา (Descriptive Literature Review) ร่วมกับการวิเคราะห์เชิงเปรียบเทียบ โดยรวบรวมข้อมูลจากแหล่งข้อมูลทางวิชาการที่เชื่อถือได้ ประกอบด้วย
+  
+  \textbf{แหล่งข้อมูลหลัก} วารสารวิชาการระดับนานาชาติที่ผ่านการประเมินโดยผู้ทรงคุณวุฒิ (Peer-reviewed Journals) เช่น IEEE Transactions on Robotics, International Journal of Robotics Research, และ Journal of Intelligent \& Robotic Systems
+  
+  \textbf{แหล่งข้อมูลทุติยภูมิ} รายงานการประชุมวิชาการนานาชาติ (Conference Proceedings) มาตรฐานสากล และรายงานวิจัยจากสถาบันชั้นนำ เช่น NIST และ ISO
+  
+  \textbf{เกณฑ์การคัดเลือกข้อมูล} เน้นงานวิจัยที่ตีพิมพ์ในช่วงปี ค.ศ. 2015-2025 มีการอ้างอิงและความน่าเชื่อถือสูง และเกี่ยวข้องโดยตรงกับหุ่นยนต์อเนกประสงค์หรือแนวคิดที่เกี่ยวข้อง
+  
+  การวิเคราะห์ข้อมูลใช้การสังเคราะห์เชิงพรรณนา (Narrative Synthesis) โดยจัดกลุ่มข้อมูลตามประเด็นหลัก วิเคราะห์แนวโน้มและความสัมพันธ์ และสรุปเป็นองค์ความรู้ที่เป็นระบบ
+  
+  \subsection{ประโยชน์ที่คาดว่าจะได้รับ}
+  
+  การศึกษานี้คาดว่าจะให้ประโยชน์แก่ผู้เกี่ยวข้องหลายกลุ่ม ดังนี้
+  
+  \textbf{สำหรับนักวิจัยและนักวิชาการ} เป็นการสังเคราะห์องค์ความรู้ที่เป็นปัจจุบันและครอบคลุม สามารถใช้เป็นฐานข้อมูลสำหรับการวิจัยต่อยอดในอนาคต
+  
+  \textbf{สำหรับผู้ประกอบการและวิศวกร} ให้ข้อมูลสำคัญสำหรับการตัดสินใจลงทุนและการประยุกต์ใช้เทคโนโลยีหุ่นยนต์อเนกประสงค์ในภาคอุตสาหกรรม
+  
+  \textbf{สำหรับนักศึกษาและผู้ที่สนใจ} เป็นแหล่งข้อมูลการเรียนรู้ที่เป็นระบบเกี่ยวกับเทคโนโลยีหุ่นยนต์ขั้นสูงและแนวโน้มการพัฒนาในอนาคต
+  
+  \textbf{สำหรับหน่วยงานกำกับดูแล} ให้ข้อมูลประกอบการพิจารณาจัดทำนโยบายและมาตรฐานที่เกี่ยวข้องกับการใช้งานหุ่นยนต์อเนกประสงค์อย่างปลอดภัยและมีประสิทธิภาพ
 \end{justify}
 
-\section{ความท้าทายทางเทคนิค}
+\section{เนื้อหา}
 \begin{justify}
-% Content will be added with proper text wrapping
+% Section 5 content (เนื้อหา)
 \end{justify}
 
-\section{ความปลอดภัยและมาตรฐาน}
+\section{การวิเคราะห์และอภิปราย}
 \begin{justify}
-% Content will be added with proper text wrapping
+% Section 6 content (การวิเคราะห์และอภิปราย)
 \end{justify}
 
-\section{ทิศทางการพัฒนาทางวิศวกรรม}
+\section{เอกสารประมิณขายงานฉบับสมบูรณ์}
 \begin{justify}
-% Content will be added with proper text wrapping
+% Section 7 content (เอกสารประมิณ - Assessment criteria)
+\end{justify}
+
+\section{ความคิดสร้างสรรค์และความเยียบร้อย}
+\begin{justify}
+% Section 8 content (ความคิดสร้างสรรค์)
 \end{justify}
 
 \section{สรุป}
 \begin{justify}
-% Content will be added with proper text wrapping
+% Section 9 content (สรุป)
 \end{justify}
 
 % ----- Bibliography -----
 \printbibliography[title=เอกสารอ้างอิง]
 
-% ----- Appendices (optional) -----
+% ----- Appendices -----
 \appendix
+
 \section{ภาคผนวก ก: คำศัพท์เทคนิค}
 \begin{justify}
-% Technical glossary will be added
+% Technical glossary
 \end{justify}
 
 \section{ภาคผนวก ข: ตารางเปรียบเทียบเทคโนโลยี}
 \begin{justify}
-% Comparison tables will be added
+% Technology comparison tables
 \end{justify}
 
 \end{document}
