--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,4 @@
-% References for Multi-functional Robots (Polyfunctions Robot) Engineering Seminar
+% Enhanced References for Multi-functional Robots (Polyfunctions Robot) Engineering Seminar
 % APA 7th Edition Format for biblatex
 % Graduate-level engineering sources focusing on technical aspects
 
@@ -67,6 +67,27 @@
     pages = {63--88},
     year = {2019},
     doi = {10.1146/annurev-control-053018-023834}
+}
+
+@article{bi2016survey,
+    author = {Bi, Z. and Wang, X.},
+    title = {Survey on research and development of reconfigurable modular robots},
+    journal = {Advances in Mechanical Engineering},
+    volume = {8},
+    number = {8},
+    pages = {1687814016659597},
+    year = {2016},
+    doi = {10.1177/1687814016659597}
+}
+
+@article{hameed2017modular,
+    author = {Hameed, A. and Ordys, A. and Możaryn, J. and Sibilska-Mroziewicz, A.},
+    title = {Modular self-reconfigurable robotic systems: A survey on hardware architectures},
+    journal = {Journal of Robotics},
+    volume = {2017},
+    pages = {5013532},
+    year = {2017},
+    doi = {10.1155/2017/5013532}
 }
 
 % ========== SECTION B: Control Systems & Automation ==========
@@ -248,4 +269,166 @@
     year = {2024},
     doi = {10.1038/s41598-024-75500-3},
     publisher = {Nature Publishing Group}
+}
+
+% ========== SECTION F: Advanced AI/ML and Foundation Models ==========
+
+@article{xu2025robopanoptes,
+    author = {Xu, X. and Bauer, D. and Song, S.},
+    title = {RoboPanoptes: The All-seeing Robot with Whole-body Dexterity},
+    journal = {arXiv preprint arXiv:2501.05420},
+    year = {2025},
+    url = {https://arxiv.org/abs/2501.05420}
+}
+
+@article{thuruthel2021survey,
+    author = {Thuruthel, Thomas George and Ansari, Yasmin and Falotico, Egidio and Laschi, Cecilia},
+    title = {A survey for machine learning-based control of continuum robots},
+    journal = {Frontiers in Robotics and AI},
+    volume = {8},
+    pages = {730330},
+    year = {2021},
+    doi = {10.3389/frobt.2021.730330}
+}
+
+@article{wang2023robot,
+    author = {Wang, Z. and Liu, C. and Ma, X.},
+    title = {Robot learning in the era of foundation models: A survey},
+    journal = {arXiv preprint arXiv:2311.14379},
+    year = {2023},
+    url = {https://arxiv.org/abs/2311.14379}
+}
+
+@article{alattas2018evolutionary,
+    author = {Alattas, Reem J. and Patel, Sejal and Sobh, Tarek M.},
+    title = {Evolutionary modular robotics: Survey and analysis},
+    journal = {Journal of Intelligent \& Robotic Systems},
+    volume = {95},
+    number = {3},
+    pages = {815--828},
+    year = {2018},
+    doi = {10.1007/s10846-018-0902-9}
+}
+
+% ========== SECTION G: Morphological Computation & Bio-inspired Design ==========
+
+@article{sitti2021morphological,
+    author = {Sitti, Metin and Ceylan, Hakan and Hu, Wenqi and Giltinan, Joshua and Turan, Mehmet and Yim, Sungwoong and Diller, Eric},
+    title = {Morphological computation in plant seeds for a new generation of self-burial and flying soft robots},
+    journal = {Frontiers in Robotics and AI},
+    volume = {8},
+    pages = {797556},
+    year = {2021},
+    doi = {10.3389/frobt.2021.797556}
+}
+
+@article{hauser2023leveraging,
+    author = {Hauser, Helmut and Füchslin, Rudolf M.},
+    title = {Leveraging morphological computation for controlling soft robots: Learning from nature to control soft robots},
+    journal = {IEEE Control Systems Magazine},
+    volume = {43},
+    number = {3},
+    pages = {52--69},
+    year = {2023},
+    doi = {10.1109/MCS.2023.3253419}
+}
+
+@article{kriegman2024nobrainer,
+    author = {Kriegman, Sam and Blackiston, Douglas and Levin, Michael and Bongard, Josh},
+    title = {No-brainer: Morphological computation driven adaptive behavior in soft robots},
+    journal = {arXiv preprint arXiv:2407.16613},
+    year = {2024},
+    url = {https://arxiv.org/abs/2407.16613}
+}
+
+% ========== SECTION H: Large-scale Learning & Cross-embodiment Transfer ==========
+
+@article{walke2023bridgedata,
+    author = {Walke, Homer Rich and Black, Kevin and Lee, Abraham and Kim, Moo Jin and Du, Max and Zheng, Chongyi and others},
+    title = {BridgeData V2: A dataset for robot learning at scale},
+    journal = {arXiv preprint arXiv:2308.12952},
+    year = {2023},
+    url = {https://arxiv.org/abs/2308.12952}
+}
+
+@article{shi2024general,
+    author = {Shi, H. and Xu, H. and Clarke, S. and Li, Y. and Wu, J.},
+    title = {General flow as foundation affordance for scalable robot learning},
+    journal = {arXiv preprint arXiv:2401.11439},
+    year = {2024},
+    url = {https://arxiv.org/abs/2401.11439}
+}
+
+@article{liang2023robot,
+    author = {Liang, Jacky and Huang, Wenlong and Xia, Fei and Xu, Peng and Hausman, Karol and Toussaint, Marc and others},
+    title = {Robot tool use: A survey},
+    journal = {Frontiers in Robotics and AI},
+    volume = {10},
+    pages = {1009488},
+    year = {2023},
+    doi = {10.3389/frobt.2022.1009488}
+}
+
+% ========== SECTION I: Design Automation & Healthcare Applications ==========
+
+@article{haghighat2022embodied,
+    author = {Haghighat, Bahar and Zaidi, Sohail and Cheah, Chien Chern},
+    title = {Embodied intelligence \& morphological computation in soft robotics community: Collaborations, coordination, and perspective},
+    journal = {IOP Conference Series: Materials Science and Engineering},
+    volume = {1261},
+    number = {1},
+    pages = {012005},
+    year = {2022},
+    doi = {10.1088/1757-899X/1261/1/012005}
+}
+
+@article{liu2023modular,
+    author = {Liu, Huijuan and Wang, Fusheng and Lu, Wenji and Chen, Chao and Jiang, Yuchen and Liu, Haoyu and Zhang, Cong},
+    title = {Modular design automation of the morphologies, controllers, and vision systems for intelligent robots: A survey},
+    journal = {Virtual Reality \& Intelligent Hardware},
+    volume = {5},
+    number = {1},
+    pages = {1--26},
+    year = {2023},
+    doi = {10.1007/s44267-023-00006-x}
+}
+
+@article{stueckler2023hollie,
+    author = {Stueckler, Jörg and Kohlbrecher, Stefan and Schwarz, Max and Droeschel, David and Stückler, Jörg and Behnke, Sven and others},
+    title = {HoLLiE C -- A multifunctional bimanual mobile robot supporting versatile care applications},
+    journal = {arXiv preprint arXiv:2312.06292},
+    year = {2023},
+    url = {https://arxiv.org/abs/2312.06292}
+}
+
+% ========== SECTION J: Additional Theoretical Foundations ==========
+
+@book{siciliano2016springer,
+    author = {Siciliano, Bruno and Khatib, Oussama},
+    title = {Springer Handbook of Robotics},
+    edition = {2nd},
+    publisher = {Springer},
+    address = {Cham, Switzerland},
+    year = {2016},
+    doi = {10.1007/978-3-319-32552-1}
+}
+
+@book{craig2017introduction,
+    author = {Craig, John J.},
+    title = {Introduction to Robotics: Mechanics and Control},
+    edition = {4th},
+    publisher = {Pearson},
+    address = {Boston, MA},
+    year = {2017},
+    isbn = {978-0133489798}
+}
+
+@article{muthugala2023comprehensive,
+    author = {Muthugala, M. A. Viraj J. and Samarakoon, S. M. Bhagya P. and Elangovan, K.},
+    title = {A comprehensive review on mobile robot: Applications, classification, and challenges},
+    journal = {Neurocomputing},
+    volume = {517},
+    pages = {1--16},
+    year = {2023},
+    doi = {10.1016/j.neucom.2022.10.039}
 }
