--- a/main.tex
+++ b/main.tex
@@ -24,26 +24,39 @@
 \XeTeXlinebreaklocale "th"
 \XeTeXlinebreakskip = 0pt plus 1pt minus 1pt
 
-% Single spacing
+% Single spacing with proper line height for Thai
 \usepackage{setspace}
-\setstretch{1.0}
+\setstretch{1.2}
 
-% 16pt body size
+% 16pt body size with better line height
 \makeatletter
 \renewcommand\normalsize{%
-  \@setfontsize\normalsize{16pt}{20pt}%
+  \@setfontsize\normalsize{16pt}{19.2pt}%
 }
 \normalsize
 \makeatother
+
+% Section titles formatting
+\usepackage{titlesec}
+\titleformat{\section}{\fontsize{18pt}{21.6pt}\selectfont\bfseries}{\thesection}{1em}{}
+\titleformat{\subsection}{\fontsize{16pt}{19.2pt}\selectfont\bfseries}{\thesubsection}{1em}{}
+\titleformat{\subsubsection}{\fontsize{16pt}{19.2pt}\selectfont\bfseries}{\thesubsubsection}{1em}{}
+
+% TOC formatting
+\usepackage{tocloft}
+\renewcommand{\cftsecfont}{\fontsize{16pt}{19.2pt}\selectfont}
+\renewcommand{\cftsubsecfont}{\fontsize{16pt}{19.2pt}\selectfont}
+\renewcommand{\cftsecpagefont}{\fontsize{16pt}{19.2pt}\selectfont}
+\renewcommand{\cftsubsecpagefont}{\fontsize{16pt}{19.2pt}\selectfont}
 
 % Essential packages
 \usepackage[hidelinks]{hyperref}
 \usepackage{booktabs}
 \usepackage{csquotes}
 
-% Thai text formatting improvements
+% Thai text formatting improvements for formal documents
 \usepackage{ragged2e}
-\RaggedRight % This helps with Thai text wrapping
+\justifying % Full justification for formal thesis
 \hyphenpenalty=10000 % Disable hyphenation for Thai
 \exhyphenpenalty=10000
 
@@ -62,9 +75,9 @@
 \def\thaialph#1{\expandafter\@thaialph\csname c@#1\endcsname}
 \makeatother
 
-% Paragraph settings for better text flow
-\setlength{\parindent}{0pt}
-\setlength{\parskip}{6pt plus 2pt minus 1pt}
+% Formal Thai thesis paragraph settings
+\setlength{\parindent}{2em}   % Standard Thai thesis indentation
+\setlength{\parskip}{0pt}     % No space between paragraphs
 
 % Better text justification for Thai
 \tolerance=1000
@@ -111,26 +124,22 @@
 \setcounter{page}{1}
 
 % ----- Abstract (Thai) -----
-\noindent
 {\centering
-    {\fontsize{18pt}{22pt}\selectfont\textbf{บทคัดย่อ}\par}
+    {\fontsize{18pt}{21.6pt}\selectfont\textbf{บทคัดย่อ}\par}
 }
+\vspace{1em}
 
-\begin{justify}
 % Thai abstract content goes here
-\end{justify}
 
 \vspace{1em}
 
 % ----- Abstract (English) -----
-\noindent
 {\centering
-    {\fontsize{18pt}{22pt}\selectfont\textbf{Abstract}\par}
+    {\fontsize{18pt}{21.6pt}\selectfont\textbf{Abstract}\par}
 }
+\vspace{1em}
 
-\begin{justify}
 % English abstract content goes here
-\end{justify}
 
 \vspace{1em}
 
@@ -152,120 +161,98 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 
-% ----- Preface -----
+% ----- Unnumbered front matter sections -----
 \section*{คำนำ}
-\begin{justify}
 % คำนำ content goes here
-\end{justify}
 
-% ----- Main Content Sections -----
+\newpage
 
-\section{องค์ประกอบของรายงาน}
-\begin{justify}
-% Section 1 content (รายงานส่วนประกอบ)
-\end{justify}
+\section*{องค์ประกอบของรายงาน}
+% รายละเอียดองค์ประกอบตามเกณฑ์การประเมิน
 
-\section{บทคัดย่อ}
-\begin{justify}
-% Section 2 content (บทคัดย่อ details)
-\end{justify}
+\newpage
 
-\section{สารบัญ}
-\begin{justify}
-% Section 3 content (สารบัญ details)
-\end{justify}
+% ----- Main Content Sections (Numbered) -----
 
 \section{บทนำ}
-\begin{justify}
-  หุ่นยนต์อเนกประสงค์ (Polyfunctional Robots) หรือหุ่นยนต์อเนกฟังก์ชัน เป็นระบบหุ่นยนต์ขั้นสูงที่ออกแบบให้สามารถปฏิบัติภารกิจที่หลากหลายและซับซ้อนภายในระบบเดียว โดยไม่จำเป็นต้องมีการปรับเปลี่ยนฮาร์ดแวร์หลักอย่างมีนัยสำคัญ \parencite{liang2025decoding} ซึ่งแตกต่างจากหุ่นยนต์แบบดั้งเดิมที่มักออกแบบมาเพื่อปฏิบัติงานเฉพาะทางเพียงอย่างเดียว หุ่นยนต์อเนกประสงค์สามารถปรับเปลี่ยนฟังก์ชันการทำงานผ่านการปรับโครงสร้างทางกายภาพ (Physical Reconfiguration) การเขียนโปรแกรมควบคุมใหม่ (Software Reconfiguration) หรือการผสมผสานโมดูลต่างๆ เข้าด้วยกัน \parencite{post2023modular}
+หุ่นยนต์อเนกประสงค์ (Polyfunctional Robots) หรือหุ่นยนต์อเนกฟังก์ชัน เป็นระบบหุ่นยนต์ขั้นสูงที่ออกแบบให้สามารถปฏิบัติภารกิจที่หลากหลายและซับซ้อนภายในระบบเดียว โดยไม่จำเป็นต้องมีการปรับเปลี่ยนฮาร์ดแวร์หลักอย่างมีนัยสำคัญ \parencite{liang2025decoding} ซึ่งแตกต่างจากหุ่นยนต์แบบดั้งเดิมที่มักออกแบบมาเพื่อปฏิบัติงานเฉพาะทางเพียงอย่างเดียว หุ่นยนต์อเนกประสงค์สามารถปรับเปลี่ยนฟังก์ชันการทำงานผ่านการปรับโครงสร้างทางกายภาพ (Physical Reconfiguration) การเขียนโปรแกรมควบคุมใหม่ (Software Reconfiguration) หรือการผสมผสานโมดูลต่างๆ เข้าด้วยกัน \parencite{post2023modular}
 
-  ในยุคของการปฏิวัติอุตสาหกรรม 4.0 และการพัฒนาปัญญาประดิษฐ์ ความต้องการหุ่นยนต์ที่มีความยืดหยุ่นและสามารถปรับตัวได้กับสภาพแวดล้อมที่เปลี่ยนแปลงเพิ่มขึ้นอย่างรวดเร็ว \parencite{mohammadi2023mobile} หุ่นยนต์อเนกประสงค์จึงกลายเป็นทางเลือกที่มีความสำคัญสำหรับอุตสาหกรรมต่างๆ ตั้งแต่การผลิตและการประกอบชิ้นส่วน ไปจนถึงการแพทย์และการสำรวจอวกาศ เนื่องจากสามารถลดต้นทุนการลงทุนและเพิ่มประสิทธิภาพการใช้งานผ่านการใช้ระบบเดียวสำหรับหลายงาน
-  
-  แนวคิดของหุ่นยนต์อเนกประสงค์มีความเชื่อมโยงอย่างใกล้ชิดกับหุ่นยนต์โมดูลาร์ (Modular Robots) และหุ่นยนต์ที่ปรับโครงสร้างได้ด้วยตนเอง (Self-Reconfiguring Robots) \parencite{seo2019modular} อย่างไรก็ตาม หุ่นยนต์อเนกประสงค์มีจุดเน้นที่แตกต่างออกไป คือ การเน้นที่ความสามารถในการปฏิบัติงานหลากหลายประเภทมากกว่าการเปลี่ยนรูปร่างหรือโครงสร้าง ทำให้เหมาะสำหรับการประยุกต์ใช้ในสภาพแวดล้อมที่ต้องการความเชี่ยวชาญในหลายด้านพร้อมกัน
-  
-  \subsection{วัตถุประสงค์ของการศึกษา}
-  
-  การศึกษานี้มีวัตถุประสงค์หลักเพื่อวิเคราะห์และสังเคราะห์องค์ความรู้เกี่ยวกับหุ่นยนต์อเนกประสงค์ในมุมมองทางวิศวกรรม โดยมีจุดมุ่งหมายเฉพาะ ดังนี้
-  
-  \textbf{1. วิเคราะห์สถาปัตยกรรมและการออกแบบ} เพื่อศึกษาหลักการออกแบบสถาปัตยกรรมแบบโมดูลาร์ที่ปรับโครงสร้างได้ (Modular Reconfigurable Architecture) และระบบควบคุมแบบลำดับชั้น (Hierarchical Control Systems) ที่เป็นพื้นฐานสำคัญของหุ่นยนต์อเนกประสงค์ \parencite{tassi2024multimodal}
-  
-  \textbf{2. ศึกษาเทคโนโลยีหลัก} โดยเฉพาะการบูรณาการเซ็นเซอร์แบบหลายโหมด (Multimodal Sensor Integration) \parencite{yang2024body} แอคชูเอเตอร์ปรับความแข็งได้ (Variable Stiffness Actuators) และการประยุกต์ใช้ปัญญาประดิษฐ์แบบโมเดลพื้นฐาน (Foundation Models) ในการควบคุม
-  
-  \textbf{3. วิเคราะห์การประยุกต์ใช้} ในภาคอุตสาหกรรมสำคัญ รวมถึงการผลิตอัตโนมัติ การแพทย์ การสำรวจอวกาศ และการกู้ภัยพิบัติ พร้อมทั้งประเมินประสิทธิภาพและความคุ้มค่าทางเศรษฐศาสตร์
-  
-  \textbf{4. ระบุความท้าทายและข้อจำกัด} ทั้งในด้านเทคนิคและการนำไปใช้งานจริง รวมถึงประเด็นด้านความปลอดภัยและมาตรฐานสากล เช่น ISO 10218-1:2025 \parencite{iso2025robotics}
-  
-  \subsection{ขอบเขตการศึกษา}
-  
-  การศึกษานี้มุ่งเน้นหุ่นยนต์อเนกประสงค์ในบริบททางวิศวกรรม โดยครอบคลุมระบบที่มีความสามารถในการปฏิบัติงานหลากหลายผ่านกลไกต่างๆ ดังนี้
-  
-  \textbf{ขอบเขตด้านเทคนิค} การศึกษาครอบคลุมหุ่นยนต์ที่สามารถปรับเปลี่ยนฟังก์ชันผ่าน (1) การปรับโครงสร้างทางกายภาพแบบโมดูลาร์ (2) การเปลี่ยนแปลงอัลกอริทึมควบคุมและซอฟต์แวร์ และ (3) การผสมผสานโมดูลฮาร์ดแวร์ที่แตกต่างกัน
-  
-  \textbf{ขอบเขตด้านการประยุกต์ใช้} เน้นการใช้งานในสภาพแวดล้อมอุตสาหกรรมและการค้า รวมถึงการแพทย์ การสำรวจ และการบริการ โดยไม่รวมถึงหุ่นยนต์เฉพาะทางที่ไม่สามารถปรับเปลี่ยนฟังก์ชันได้
-  
-  \textbf{ขอบเขตด้านเวลา} การศึกษาเน้นงานวิจัยและพัฒนาตั้งแต่ปี ค.ศ. 2015 ถึงปัจจุบัน โดยเฉพาะอย่างยิ่งความก้าวหน้าในช่วง 5 ปีล่าสุดที่มีการประยุกต์ใช้ปัญญาประดิษฐ์และเทคโนโลยีการเรียนรู้ของเครื่อง
-  
-  \subsection{คำจำกัดความสำคัญ}
-  
-  เพื่อความชัดเจนในการศึกษา จึงกำหนดคำจำกัดความของแนวคิดสำคัญ ดังนี้
-  
-  \textbf{หุ่นยนต์อเนกประสงค์ (Polyfunctional Robots)} หมายถึง ระบบหุ่นยนต์ที่สามารถปฏิบัติงานที่หลากหลายและแตกต่างกันได้ภายในระบบเดียว โดยมีความสามารถในการปรับเปลี่ยนฟังก์ชันการทำงานตามความต้องการของงานแต่ละประเภท
-  
-  \textbf{หุ่นยนต์โมดูลาร์ (Modular Robots)} หมายถึง หุ่นยนต์ที่ประกอบด้วยโมดูลแยกส่วนที่สามารถเชื่อมต่อและแยกออกจากกันได้ เพื่อสร้างโครงสร้างและฟังก์ชันใหม่ตามต้องการ \parencite{bi2016survey}
-  
-  \textbf{หุ่นยนต์ปรับโครงสร้างได้ (Self-Reconfiguring Robots)} หมายถึง หุ่นยนต์ที่สามารถเปลี่ยนแปลงรูปร่างและโครงสร้างของตนเองได้โดยอัตโนมัติ เพื่อให้เหมาะสมกับงานหรือสภาพแวดล้อมที่แตกต่างกัน \parencite{hameed2017modular}
-  
-  \textbf{การควบคุมแบบลำดับชั้น (Hierarchical Control)} หมายถึง ระบบควบคุมที่จัดระดับการควบคุมเป็นชั้นๆ โดยชั้นบนมีหน้าที่วางแผนและตัดสินใจระดับสูง ส่วนชั้นล่างดำเนินการควบคุมรายละเอียดเฉพาะทาง
-  
-  \subsection{ระเบียบวิธีการศึกษา}
-  
-  การศึกษานี้ใช้วิธีการทบทวนวรรณกรรมเชิงพรรณนา (Descriptive Literature Review) ร่วมกับการวิเคราะห์เชิงเปรียบเทียบ โดยรวบรวมข้อมูลจากแหล่งข้อมูลทางวิชาการที่เชื่อถือได้ ประกอบด้วย
-  
-  \textbf{แหล่งข้อมูลหลัก} วารสารวิชาการระดับนานาชาติที่ผ่านการประเมินโดยผู้ทรงคุณวุฒิ (Peer-reviewed Journals) เช่น IEEE Transactions on Robotics, International Journal of Robotics Research, และ Journal of Intelligent \& Robotic Systems
-  
-  \textbf{แหล่งข้อมูลทุติยภูมิ} รายงานการประชุมวิชาการนานาชาติ (Conference Proceedings) มาตรฐานสากล และรายงานวิจัยจากสถาบันชั้นนำ เช่น NIST และ ISO
-  
-  \textbf{เกณฑ์การคัดเลือกข้อมูล} เน้นงานวิจัยที่ตีพิมพ์ในช่วงปี ค.ศ. 2015-2025 มีการอ้างอิงและความน่าเชื่อถือสูง และเกี่ยวข้องโดยตรงกับหุ่นยนต์อเนกประสงค์หรือแนวคิดที่เกี่ยวข้อง
-  
-  การวิเคราะห์ข้อมูลใช้การสังเคราะห์เชิงพรรณนา (Narrative Synthesis) โดยจัดกลุ่มข้อมูลตามประเด็นหลัก วิเคราะห์แนวโน้มและความสัมพันธ์ และสรุปเป็นองค์ความรู้ที่เป็นระบบ
-  
-  \subsection{ประโยชน์ที่คาดว่าจะได้รับ}
-  
-  การศึกษานี้คาดว่าจะให้ประโยชน์แก่ผู้เกี่ยวข้องหลายกลุ่ม ดังนี้
-  
-  \textbf{สำหรับนักวิจัยและนักวิชาการ} เป็นการสังเคราะห์องค์ความรู้ที่เป็นปัจจุบันและครอบคลุม สามารถใช้เป็นฐานข้อมูลสำหรับการวิจัยต่อยอดในอนาคต
-  
-  \textbf{สำหรับผู้ประกอบการและวิศวกร} ให้ข้อมูลสำคัญสำหรับการตัดสินใจลงทุนและการประยุกต์ใช้เทคโนโลยีหุ่นยนต์อเนกประสงค์ในภาคอุตสาหกรรม
-  
-  \textbf{สำหรับนักศึกษาและผู้ที่สนใจ} เป็นแหล่งข้อมูลการเรียนรู้ที่เป็นระบบเกี่ยวกับเทคโนโลยีหุ่นยนต์ขั้นสูงและแนวโน้มการพัฒนาในอนาคต
-  
-  \textbf{สำหรับหน่วยงานกำกับดูแล} ให้ข้อมูลประกอบการพิจารณาจัดทำนโยบายและมาตรฐานที่เกี่ยวข้องกับการใช้งานหุ่นยนต์อเนกประสงค์อย่างปลอดภัยและมีประสิทธิภาพ
-\end{justify}
+ในยุคของการปฏิวัติอุตสาหกรรม 4.0 และการพัฒนาปัญญาประดิษฐ์ ความต้องการหุ่นยนต์ที่มีความยืดหยุ่นและสามารถปรับตัวได้กับสภาพแวดล้อมที่เปลี่ยนแปลงเพิ่มขึ้นอย่างรวดเร็ว \parencite{mohammadi2023mobile} หุ่นยนต์อเนกประสงค์จึงกลายเป็นทางเลือกที่มีความสำคัญสำหรับอุตสาหกรรมต่างๆ ตั้งแต่การผลิตและการประกอบชิ้นส่วน ไปจนถึงการแพทย์และการสำรวจอวกาศ เนื่องจากสามารถลดต้นทุนการลงทุนและเพิ่มประสิทธิภาพการใช้งานผ่านการใช้ระบบเดียวสำหรับหลายงาน
+
+แนวคิดของหุ่นยนต์อเนกประสงค์มีความเชื่อมโยงอย่างใกล้ชิดกับหุ่นยนต์โมดูลาร์ (Modular Robots) และหุ่นยนต์ที่ปรับโครงสร้างได้ด้วยตนเอง (Self-Reconfiguring Robots) \parencite{seo2019modular} อย่างไรก็ตาม หุ่นยนต์อเนกประสงค์มีจุดเน้นที่แตกต่างออกไป คือ การเน้นที่ความสามารถในการปฏิบัติงานหลากหลายประเภทมากกว่าการเปลี่ยนรูปร่างหรือโครงสร้าง ทำให้เหมาะสำหรับการประยุกต์ใช้ในสภาพแวดล้อมที่ต้องการความเชี่ยวชาญในหลายด้านพร้อมกัน
+
+\subsection{วัตถุประสงค์ของการศึกษา}
+
+การศึกษานี้มีวัตถุประสงค์หลักเพื่อวิเคราะห์และสังเคราะห์องค์ความรู้เกี่ยวกับหุ่นยนต์อเนกประสงค์ในมุมมองทางวิศวกรรม โดยมีจุดมุ่งหมายเฉพาะ ดังนี้
+
+\textbf{1. วิเคราะห์สถาปัตยกรรมและการออกแบบ} เพื่อศึกษาหลักการออกแบบสถาปัตยกรรมแบบโมดูลาร์ที่ปรับโครงสร้างได้ (Modular Reconfigurable Architecture) และระบบควบคุมแบบลำดับชั้น (Hierarchical Control Systems) ที่เป็นพื้นฐานสำคัญของหุ่นยนต์อเนกประสงค์ \parencite{tassi2024multimodal}
+
+\textbf{2. ศึกษาเทคโนโลยีหลัก} โดยเฉพาะการบูรณาการเซ็นเซอร์แบบหลายโหมด (Multimodal Sensor Integration) \parencite{yang2024body} แอคชูเอเตอร์ปรับความแข็งได้ (Variable Stiffness Actuators) และการประยุกต์ใช้ปัญญาประดิษฐ์แบบโมเดลพื้นฐาน (Foundation Models) ในการควบคุม
+
+\textbf{3. วิเคราะห์การประยุกต์ใช้} ในภาคอุตสาหกรรมสำคัญ รวมถึงการผลิตอัตโนมัติ การแพทย์ การสำรวจอวกาศ และการกู้ภัยพิบัติ พร้อมทั้งประเมินประสิทธิภาพและความคุ้มค่าทางเศรษฐศาสตร์
+
+\textbf{4. ระบุความท้าทายและข้อจำกัด} ทั้งในด้านเทคนิคและการนำไปใช้งานจริง รวมถึงประเด็นด้านความปลอดภัยและมาตรฐานสากล เช่น ISO 10218-1:2025 \parencite{iso2025robotics}
+
+\subsection{ขอบเขตการศึกษา}
+
+การศึกษานี้มุ่งเน้นหุ่นยนต์อเนกประสงค์ในบริบททางวิศวกรรม โดยครอบคลุมระบบที่มีความสามารถในการปฏิบัติงานหลากหลายผ่านกลไกต่างๆ ดังนี้
+
+\textbf{ขอบเขตด้านเทคนิค} การศึกษาครอบคลุมหุ่นยนต์ที่สามารถปรับเปลี่ยนฟังก์ชันผ่าน (1) การปรับโครงสร้างทางกายภาพแบบโมดูลาร์ (2) การเปลี่ยนแปลงอัลกอริทึมควบคุมและซอฟต์แวร์ และ (3) การผสมผสานโมดูลฮาร์ดแวร์ที่แตกต่างกัน
+
+\textbf{ขอบเขตด้านการประยุกต์ใช้} เน้นการใช้งานในสภาพแวดล้อมอุตสาหกรรมและการค้า รวมถึงการแพทย์ การสำรวจ และการบริการ โดยไม่รวมถึงหุ่นยนต์เฉพาะทางที่ไม่สามารถปรับเปลี่ยนฟังก์ชันได้
+
+\textbf{ขอบเขตด้านเวลา} การศึกษาเน้นงานวิจัยและพัฒนาตั้งแต่ปี ค.ศ. 2015 ถึงปัจจุบัน โดยเฉพาะอย่างยิ่งความก้าวหน้าในช่วง 5 ปีล่าสุดที่มีการประยุกต์ใช้ปัญญาประดิษฐ์และเทคโนโลยีการเรียนรู้ของเครื่อง
+
+\subsection{คำจำกัดความสำคัญ}
+
+เพื่อความชัดเจนในการศึกษา จึงกำหนดคำจำกัดความของแนวคิดสำคัญ ดังนี้
+
+\textbf{หุ่นยนต์อเนกประสงค์ (Polyfunctional Robots)} หมายถึง ระบบหุ่นยนต์ที่สามารถปฏิบัติงานที่หลากหลายและแตกต่างกันได้ภายในระบบเดียว โดยมีความสามารถในการปรับเปลี่ยนฟังก์ชันการทำงานตามความต้องการของงานแต่ละประเภท
+
+\textbf{หุ่นยนต์โมดูลาร์ (Modular Robots)} หมายถึง หุ่นยนต์ที่ประกอบด้วยโมดูลแยกส่วนที่สามารถเชื่อมต่อและแยกออกจากกันได้ เพื่อสร้างโครงสร้างและฟังก์ชันใหม่ตามต้องการ \parencite{bi2016survey}
+
+\textbf{หุ่นยนต์ปรับโครงสร้างได้ (Self-Reconfiguring Robots)} หมายถึง หุ่นยนต์ที่สามารถเปลี่ยนแปลงรูปร่างและโครงสร้างของตนเองได้โดยอัตโนมัติ เพื่อให้เหมาะสมกับงานหรือสภาพแวดล้อมที่แตกต่างกัน \parencite{hameed2017modular}
+
+\textbf{การควบคุมแบบลำดับชั้น (Hierarchical Control)} หมายถึง ระบบควบคุมที่จัดระดับการควบคุมเป็นชั้นๆ โดยชั้นบนมีหน้าที่วางแผนและตัดสินใจระดับสูง ส่วนชั้นล่างดำเนินการควบคุมรายละเอียดเฉพาะทาง
+
+\subsection{ระเบียบวิธีการศึกษา}
+
+การศึกษานี้ใช้วิธีการทบทวนวรรณกรรมเชิงพรรณนา (Descriptive Literature Review) ร่วมกับการวิเคราะห์เชิงเปรียบเทียบ โดยรวบรวมข้อมูลจากแหล่งข้อมูลทางวิชาการที่เชื่อถือได้ ประกอบด้วย
+
+\textbf{แหล่งข้อมูลหลัก} วารสารวิชาการระดับนานาชาติที่ผ่านการประเมินโดยผู้ทรงคุณวุฒิ (Peer-reviewed Journals) เช่น IEEE Transactions on Robotics, International Journal of Robotics Research, และ Journal of Intelligent \& Robotic Systems
+
+\textbf{แหล่งข้อมูลทุติยภูมิ} รายงานการประชุมวิชาการนานาชาติ (Conference Proceedings) มาตรฐานสากล และรายงานวิจัยจากสถาบันชั้นนำ เช่น NIST และ ISO
+
+\textbf{เกณฑ์การคัดเลือกข้อมูล} เน้นงานวิจัยที่ตีพิมพ์ในช่วงปี ค.ศ. 2015-2025 มีการอ้างอิงและความน่าเชื่อถือสูง และเกี่ยวข้องโดยตรงกับหุ่นยนต์อเนกประสงค์หรือแนวคิดที่เกี่ยวข้อง
+
+การวิเคราะห์ข้อมูลใช้การสังเคราะห์เชิงพรรณนา (Narrative Synthesis) โดยจัดกลุ่มข้อมูลตามประเด็นหลัก วิเคราะห์แนวโน้มและความสัมพันธ์ และสรุปเป็นองค์ความรู้ที่เป็นระบบ
+
+\subsection{ประโยชน์ที่คาดว่าจะได้รับ}
+
+การศึกษานี้คาดว่าจะให้ประโยชน์แก่ผู้เกี่ยวข้องหลายกลุ่ม ดังนี้
+
+\textbf{สำหรับนักวิจัยและนักวิชาการ} เป็นการสังเคราะห์องค์ความรู้ที่เป็นปัจจุบันและครอบคลุม สามารถใช้เป็นฐานข้อมูลสำหรับการวิจัยต่อยอดในอนาคต
+
+\textbf{สำหรับผู้ประกอบการและวิศวกร} ให้ข้อมูลสำคัญสำหรับการตัดสินใจลงทุนและการประยุกต์ใช้เทคโนโลยีหุ่นยนต์อเนกประสงค์ในภาคอุตสาหกรรม
+
+\textbf{สำหรับนักศึกษาและผู้ที่สนใจ} เป็นแหล่งข้อมูลการเรียนรู้ที่เป็นระบบเกี่ยวกับเทคโนโลยีหุ่นยนต์ขั้นสูงและแนวโน้มการพัฒนาในอนาคต
+
+\textbf{สำหรับหน่วยงานกำกับดูแล} ให้ข้อมูลประกอบการพิจารณาจัดทำนโยบายและมาตรฐานที่เกี่ยวข้องกับการใช้งานหุ่นยนต์อเนกประสงค์อย่างปลอดภัยและมีประสิทธิภาพ
 
 \section{เนื้อหา}
-\begin{justify}
-% Section 5 content (เนื้อหา)
-\end{justify}
+% Section 2 content (เนื้อหา)
 
 \section{การวิเคราะห์และอภิปราย}
-\begin{justify}
-% Section 6 content (การวิเคราะห์และอภิปราย)
-\end{justify}
+% Section 3 content (การวิเคราะห์และอภิปราย)
 
 \section{เอกสารประมิณขายงานฉบับสมบูรณ์}
-\begin{justify}
-% Section 7 content (เอกสารประมิณ - Assessment criteria)
-\end{justify}
+% Section 4 content (เอกสารประมิณ - Assessment criteria)
 
 \section{ความคิดสร้างสรรค์และความเยียบร้อย}
-\begin{justify}
-% Section 8 content (ความคิดสร้างสรรค์)
-\end{justify}
+% Section 5 content (ความคิดสร้างสรรค์)
 
 \section{สรุป}
-\begin{justify}
-% Section 9 content (สรุป)
-\end{justify}
+% Section 6 content (สรุป)
 
 % ----- Bibliography -----
 \printbibliography[title=เอกสารอ้างอิง]
@@ -274,13 +261,9 @@
 \appendix
 
 \section{ภาคผนวก ก: คำศัพท์เทคนิค}
-\begin{justify}
 % Technical glossary
-\end{justify}
 
 \section{ภาคผนวก ข: ตารางเปรียบเทียบเทคโนโลยี}
-\begin{justify}
 % Technology comparison tables
-\end{justify}
 
 \end{document}
